# tauri-chat-box

./: .gitignore  README.md  database.db  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  vue3-markdown-it.d.ts
src-tauri/: Cargo.toml  database.db  tauri.conf.json
src-tauri/src/: main.rs  session.rs
src/components/: Database.vue  Greet.vue  Message.vue  Session.vue  Settings.vue  Text.vue  Welcome.vue  style.less
src/locale/: en.json
src/network/: index.ts  stream.text  types.ts
src/plugins/: i18n.ts  pinia.ts  theme.ts  vuetify.ts  webfontloader.ts
src/repositoriy/: conversation.ts
src/repository/: message.ts  session.ts
src/storage/: index.ts
src/store/: message.ts  session.ts  setting.ts
src/styles/: highlight.less  settings.scss
